libsoup2.4 (2.41.90-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 23 Feb 2013 17:16:24 +0100

libsoup2.4 (2.40.1-1) experimental; urgency=low

  * New upstream release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 23 Oct 2012 15:27:18 +0200

libsoup2.4 (2.39.92-1) experimental; urgency=low

  * New upstream release.
  * Track unstable versions in the experimental branch.
  * Bump Build-Depends on libglib2.0-dev to (>= 2.33.14) so we don't pick up
    the version from unstable. This will also generate a tight enough
    dependency. Closes: #687388

 -- Michael Biebl <biebl@debian.org>  Thu, 20 Sep 2012 21:05:44 +0200

libsoup2.4 (2.39.90-1) experimental; urgency=low

  * New upstream release (Packaging from 2.39.90-0ubuntu1)

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 26 Aug 2012 15:41:50 +0200

libsoup2.4 (2.38.1-2) unstable; urgency=low

  * Make test suite failures non-fatal so we don't block testing migration due
    to failing builds on kfreebsd-* and sparc. Once #643906 and #663056 are
    fixed this change should be reverted again.

 -- Michael Biebl <biebl@debian.org>  Tue, 17 Apr 2012 20:50:12 +0200

libsoup2.4 (2.38.1-1) unstable; urgency=low

  * New upstream release:
    - Fixed a situation where soup_connection_disconnect() could end up
      calling g_object_unref(NULL) when an idle connection was closed
    - Fixed two warnings when cancelling an in-progress
      soup_socket_connect_async()
    - Fixed a crash when disposing a SoupServer with open connections
    - Fixed the SoupSession:ssl-use-system-ca-file property to get turned off
      (rather than on) when you set it to FALSE... Also fixed up the property
      notifications around the various certificate-verification properties
      (ssl-ca-file, ssl-use-system-ca-file, and tls-database).
    - Fixed SoupSession to not leak paused SoupMessages that were still in
      progress when it was unreffed.