@@ -12,9 +12,8 @@ Build-Depends: debhelper (>= 9),
                cdbs (>= 0.4.93~),
                gnome-pkg-tools,
                intltool (>= 0.35.0),
-               libglib2.0-dev (>= 2.33.14),
+               libglib2.0-dev (>= 2.35.0),
                glib-networking (>= 2.32.0),
-               libgnome-keyring-dev,
                libsqlite3-dev,
                libxml2-dev,
                gtk-doc-tools,
@@ -33,7 +32,7 @@ Section: libdevel
 Depends: ${misc:Depends},
          libsoup2.4-1 (= ${binary:Version}),
          gir1.2-soup-2.4 (= ${binary:Version}),
-         libglib2.0-dev (>= 2.33.1),
+         libglib2.0-dev (>= 2.35.0),
          libxml2-dev
 Suggests: libsoup2.4-doc
 Replaces: gir-repository-dev
