@@ -1,6 +1,8 @@
 libsoup2.4 (2.41.90-1) UNRELEASED; urgency=low
 
   * New upstream release.
+    + debian/control.in:
+      - Update build dependencies.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 23 Feb 2013 17:16:24 +0100
 
